--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,7 +6,7 @@
   <div><%= f.label :first_name %><br />
   <%= f.text_field :first_name %></div>
 
-  <div><%= f.label :lasst_name %><br />
+  <div><%= f.label :last_name %><br />
   <%= f.text_field :last_name %></div>
 
   <div><%= f.label :profile_name %><br />
